Added memory settings for maven plugins