@@ -195,12 +195,22 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.1</version>
+                    <configuration>
+                        <additionalJOptions>
+                            <additionalJOption>-J-Xms32m -J-Xmx128m</additionalJOption>
+                        </additionalJOptions>
+                    </configuration>
                 </plugin>
                 <!-- maven-surefire-plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xms32m -Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
                 </plugin>
                 <!-- maven-failsafe-plugin -->
                 <plugin>
